sample/retrieveUnpackaged/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Alliance__c</fullName>
        <label>Alliance</label>
        <picklist>
            <picklistValues>
                <fullName>SEWL Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rebate_Amount__c</fullName>
        <label>Rebate Amount</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Source__c</fullName>
        <label>Rebate Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Party_Name__c</fullName>
        <label>Third Party Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Role__c</fullName>
        <label>Third Party Role</label>
        <picklist>
            <controllingField>Alliance__c</controllingField>
            <picklistValues>
                <fullName>Call Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply &amp; Install</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B/B2C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>Migration_Id__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>IOTA_Product</fullName>
        <active>true</active>
        <description>Record Type for capturing products used by the IOTA Group</description>
        <label>IOTA Product</label>
    </recordTypes>
    <validationRules>
        <fullName>Rebate_Amount_Check</fullName>
        <active>false</active>
        <description>Rebate amount is mandatory if rebate is checked.</description>
        <errorConditionFormula>IF( Rebate__c &amp;&amp;  ( ISBLANK(Rebate_Amount__c) ) , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Rebate_Amount__c</errorDisplayField>
        <errorMessage>Please enter a rebate amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Third_Party_Name_Check</fullName>
        <active>true</active>
        <description>Thrid party name is mandatory if Third Party is picked.</description>
        <errorConditionFormula>IF(  ISPICKVAL( Alliance__c , &apos;Third Party&apos;)  &amp;&amp;  ISBLANK( Third_Party_Name__c ) , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Third_Party_Name__c</errorDisplayField>
        <errorMessage>Please enter a Third Party Name.</errorMessage>
    </validationRules>
</CustomObject>